<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fl.Home.BuyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/iv_back_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back64"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margina"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@mipmap/search128"
            android:hint="@string/edit_hint"
            android:textSize="@dimen/edit_text"
            />

        <TextView
            android:id="@+id/tv_go_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/edit_text"
            android:textColor="@color/main_color"
            android:paddingLeft="@dimen/activity_horizontal_margina"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margina"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:drawableRight="@mipmap/pull48"
                android:textSize="@dimen/edit_text"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:drawableRight="@mipmap/pull48"
                android:textSize="@dimen/edit_text"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:drawableRight="@mipmap/pull48"
                android:textSize="@dimen/edit_text"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:drawableRight="@mipmap/pull48"
                android:textSize="@dimen/edit_text"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/horizontal_gray_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <ListView
            android:id="@+id/list_buy"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>

    </ScrollView>

</LinearLayout>
