<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.fl.Home.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/iv_back_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back64"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margina"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@mipmap/search128"
            android:hint="@string/edit_hint"
            android:textSize="@dimen/edit_text"
            />

        <TextView
            android:id="@+id/tv_go_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/edit_text"
            android:textColor="@color/main_color"
            android:paddingLeft="@dimen/activity_horizontal_margina"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:textColor="@color/main_color"
        android:textSize="@dimen/edit_text"
        android:layout_marginTop="@dimen/edit_text"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />

    <LinearLayout style="@style/horizontal_gray_line"/>



</LinearLayout>
